base/src/test/resources/failure/terck/issue471.aya.txt
In file $FILE:10:6 ->

  8  |   
  9  |   module Bug {
  10 |     def f D : Nat
     |         ^^

Error: The recursive definition `f` is not structurally recursive
note: In particular, the problematic call is:
        f (n · 2)
      whose call matrix is:
        ?

In file $FILE:10:6 ->

  8  |   
  9  |   module Bug {
  10 |     def f D : Nat
     |         ^^

Error: The recursive definition `f` is not structurally recursive
note: In particular, the problematic call is:
        f (suc n · m)
      whose call matrix is:
        ?

2 error(s), 0 warning(s).
What are you doing?
